--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
         }
     },
     "include": ["src"],
-    "exclude": ["node_modules", "dist", "logs"]
+    "exclude": ["node_modules", "dist", "logs", "docs"]
 }
